--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
 
 body {
   font-family: var(--ff-ubuntu);
+  line-height: 1.5;
 }
 
 a {
@@ -39,7 +40,8 @@ ul {
   width: 100%;
   top: 0;
   left: 0;
-  padding: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   z-index: 10;
 }
 
@@ -47,6 +49,10 @@ ul {
   display: flex;
   justify-content: space-around;
   width: 100%;
+}
+
+.nav-list a:hover {
+  opacity: 50% ;
 }
 
 /* WELCOME SECTION */
@@ -159,4 +165,105 @@ ul {
   background-color: var(--bc-accent);
   color: var(--bc-dark);
   font-weight: bold;
+}
+
+/* CONTACT SECTION */
+
+.contact-section {
+  background-color: var(--bc-semi-light1);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-bottom: 1rem;
+}
+
+.contact-section h2 {
+  font-size: 3rem;
+  padding: 2rem;
+}
+
+.contact-section a {
+  color: var(--bc-dark);
+}
+
+.contact-section a:hover {
+  opacity: 50%;
+}
+
+.contact-section i {
+  font-size: 2rem;
+}
+
+.contact-links {
+  display: flex;
+  flex-direction: column;
+}
+
+/* FOOTER */
+
+footer {
+  background-color: var(--bc-dark);
+  color: var(--bc-light);
+  display: flex;
+  justify-content: space-around;
+  padding: 2rem;
+}
+
+footer a:hover {
+  color: var(--bc-accent);
+  cursor: pointer;
+  font-weight: bold;
+}
+
+/* RESPONSIVE DESIGN */
+
+@media only screen and (max-width: 600px) {
+  /* NAV SECTION */
+  .nav a {
+    font-size: 12px;
+  }
+
+  /* WELCOME SECTION */
+  .welcome-section h1 {
+    font-size: 1.5rem;
+  }
+  
+  .welcome-section p {
+    font-size: 1rem;
+  }
+
+  /* ABOUT SECTION */
+  .about-section h1 {
+    font-size: 1.5rem;
+  }
+
+  .about-section p {
+    font-size: 15px;
+  }
+
+  /* PROJECTS SECTION */
+  .projects-header {
+    font-size: 1.5rem;
+  }
+
+  .project-tile {
+    font-size: 15px;
+  }
+
+  /* CONTACT SECTION */
+  .contact-section h2 {
+    font-size: 1.5rem;
+  }
+
+  .contact-section i {
+    font-size: 1rem;
+  }
+
+  /* BUTTONS */
+  .btn {
+    padding: 0.5rem 1.5rem;
+  }
 }
