--- a/cv.css
+++ b/cv.css
@@ -28,10 +28,14 @@ html, body {
   position: fixed;
   top: 0px;
   width: 300px;
-  border-right: 2px solid var(--bc-semi-light);
-  color: var(--bc-light);
   text-align: center;
+  border-right: 2px solid var(--bc-dark);
   background-color: var(--bc-dark);
+}
+
+#navbar h1 {
+  color: var(--bc-accent);
+  padding-top: 1.5rem;
 }
 
 #navbar a {
@@ -47,23 +51,18 @@ html, body {
   padding-top: 0.5rem;
 }
 
-.profile-img {
-  width: 160px;
-  border-radius: 50%;
-  opacity: 80%;
-  padding: 0.5rem;
-}
-
-a {
-  text-decoration: none;
-  color: var(--bc-accent-dark);
-}
-
 #navbar a:hover {
   background-color: var(--bc-accent);
   color: var(--bc-light);
   cursor: pointer;
   font-weight: bold;
+}
+
+.profile-img {
+  width: 150px;
+  border-radius: 50%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 #navbar ul {
@@ -84,34 +83,42 @@ a {
   margin-right: 0px;
 }
 
-
-article {
-  padding: 1rem;
-}
-
-ul {
-  padding: 0.5rem;
-}
-
 .nav-link {
-  border-top: 1px solid var(--bc-dark2);  
-}
-
-h1 {
-  color: var(--bc-accent);
-  font-size: 1.5rem;
+  border-top: 2px solid var(--bc-dark2);  
 }
 
 h2 {
-  font-size: 1rem;
-}
-
-ul, p {
-  font-size: 19px;
-}
-
-footer {
+  font-size: 2rem;
   color: var(--bc-accent);
+  border-bottom: 2px solid var(--bc-dark);
+  text-align: center;
+  margin-top: 1rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+  color: var(--bc-dark);
+  padding-top: 1rem;
+}
+
+ul {
+  padding-top: 1rem;
+  padding-left: 1rem;
+}
+
+p a {
+  text-decoration: none;
+  color: var(--bc-dark);
+  font-weight: bold;
+}
+
+p a:hover {
+  opacity: 50%;
+}
+
+footer a {
+  text-decoration: none;
+  color: var(--bc-accent-dark);
 }
 
 @media (max-width: 850px) {
@@ -119,62 +126,22 @@ footer {
   position: relative;
   width: auto;
   border: none;
-  
   }
 
   #main-doc {
     margin-left: 0;
     width: auto;
   }
-
-  a {
-    font-size: 16px;
-  }
-
-  h1 {
-    font-size: 1.5rem;
-  }
-
-  h2 {
-    font-size: 1.5rem;
-  }
-
-  h3 {
-    font-size: 1rem;
-  }
-  
-  ul {
-    font-size: 16px;
-  }
-
-  p{
-    font-size: 16px;
-  }
 }
 
 @media (max-width: 400px) {
-
-  a {
-    font-size: 15px;
-  }
-
-  h1 {
-    font-size: 1rem;
-  }
-
   h2 {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
-
   h3 {
     font-size: 1rem;
   }
-  
   ul {
-    font-size: 15px;
-  }
-
-  p{
     font-size: 15px;
   }
 }
