--- a/cv.css
+++ b/cv.css
@@ -106,14 +106,18 @@ ul {
   padding-left: 1rem;
 }
 
-p a {
+p a, section ul a {
   text-decoration: none;
   color: var(--bc-dark);
   font-weight: bold;
 }
 
-p a:hover {
+p a:hover,section ul a:hover {
   opacity: 50%;
+}
+
+ul a {
+
 }
 
 footer a {
