--- a/cv.css
+++ b/cv.css
@@ -106,13 +106,14 @@ ul {
   padding-left: 1rem;
 }
 
-p a, section ul a {
+section ul a {
   text-decoration: none;
   color: var(--bc-dark);
   font-weight: bold;
+  
 }
 
-p a:hover,section ul a:hover {
+section ul a:hover {
   opacity: 50%;
 }
 
