--- a/cv.css
+++ b/cv.css
@@ -1,11 +1,10 @@
 :root {
-  --ff-ubuntu: 'Ubuntu', sans-serif;
-  --ff-ubuntu-mono: 'Ubuntu Mono', monospace;
+  --ff-1: 'Karla', sans-serif;
+  --ff-2: 'Ubuntu', sans-serif;
   --bc-accent: #F65A83;
   --bc-accent-light: #F9B5D0;
-  --bc-accent-dark: #F44272;
   --bc-dark: #090909;
-  --bc-dark2: #393939;
+  --bc-dark2: #2c2c2c;
   --bc-light: #FFF;
   --bc-semi-light: #EEEEEE;
   --lh: 1.5;
@@ -17,9 +16,8 @@
 }
 
 html, body {
-  font-family: var(--ff-ubuntu);
+  font-family: var(--ff-1);
   line-height: var(--lh);
-  background-color: var(--bc-semi-light);
 }
 
 #navbar {
@@ -29,40 +27,44 @@ html, body {
   top: 0px;
   width: 300px;
   text-align: center;
-  border-right: 2px solid var(--bc-dark);
   background-color: var(--bc-dark);
 }
 
 #navbar h1 {
-  color: var(--bc-accent);
-  padding-top: 1.5rem;
+  color: var(--bc-light);
+  font-family: var(--ff-2);
+  font-size: 1.5rem;
+  font-weight: 400;
+  padding-bottom: 1rem;
 }
 
 #navbar a {
   display: block;
   text-decoration: none;
   padding: 15px 20px;
-  font-size: 16px;
+  font-size: 18px;
   color: var(--bc-light);
-  font-size: 1rem;
+  font-family: var(--ff-2);  
 }
 
 #navbar h2 {
-  padding-top: 0.5rem;
+  padding-top: 1rem;
 }
 
 #navbar a:hover {
-  background-color: var(--bc-accent);
-  color: var(--bc-light);
+  background-color: var(--bc-semi-light);
+  color: var(--bc-dark);
   cursor: pointer;
-  font-weight: bold;
+}
+
+.profile-sec {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .profile-img {
-  width: 190px;
+  width: 200px;
   border-radius: 50%;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 
 #navbar ul {
@@ -77,20 +79,22 @@ html, body {
 }
 
 #main-doc {
-  padding: 3rem;
+  padding: 2.5rem;
   position: absolute;
   margin-left: 300px;
   margin-right: 0px;
 }
 
 .nav-link {
-  border-top: 2px solid var(--bc-dark2);  
+  border-top: 1px solid var(--bc-dark2);  
 }
 
 h2 {
   font-size: 2rem;
+  font-weight: 500;
   color: var(--bc-accent);
-  border-bottom: 2px solid var(--bc-dark);
+  font-family: var(--ff-2);
+  border-bottom: 4px solid var(--bc-accent);
   text-align: center;
   margin-top: 1rem;
 }
@@ -106,11 +110,11 @@ ul {
   padding-left: 1rem;
 }
 
-section ul a {
+section ul a{
   text-decoration: none;
   color: var(--bc-dark);
-  font-weight: bold;
-  
+  font-weight: bold; 
+  font-family: var(--ff-2);
 }
 
 section ul a:hover {
@@ -119,7 +123,7 @@ section ul a:hover {
 
 footer a {
   text-decoration: none;
-  color: var(--bc-accent-dark);
+  color: var(--bc-accent);
 }
 
 @media (max-width: 850px) {
