--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,12 @@ body {
 
 a {
   text-decoration: none;
+  color: white;
+}
+
+.nav a {
   color: var(--bc-light);
-  text-transform: uppercase;
+  margin: 1rem;
 }
 
 ul {
@@ -32,28 +36,50 @@ ul {
 
 /* NAV SECTION */
 
+/* LOGO */
+nav img {
+  max-width: 150px;
+}
+
+nav img:hover {
+  opacity: 50%;
+  transition: opacity 1s;
+}
+
 .nav {
-  background-color: var(--bc-accent);
+  background-color: var(--bc-dark);
   display: flex;
-  position: fixed;
   width: 100%;
   top: 0;
   left: 0;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  z-index: 10;
-  font-family: var(--ff-2);
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-family: var(--ff-1);
+  align-items: center;
 }
 
 .nav-list {
   display: flex;
-  justify-content: space-around;
+  justify-content: end;
   width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.nav-list a {
+  transition: padding 1s;
 }
 
 .nav-list a:hover {
-  opacity: 50%;
+  background-color: var(--bc-dark);
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 2px;
+  padding-bottom: 5px;
+  border-bottom: 2px solid var(--bc-accent);
 }
+
 
 /* WELCOME SECTION */
 
@@ -66,7 +92,6 @@ ul {
   text-align: center;
   width: 100%;
   height: 100vh;
-  margin-top: 3rem;
   color: var(--bc-light);
 }
 
@@ -85,13 +110,30 @@ ul {
 /* ABOUT SECTION */
 
 .about-section {
+  background-image: url(img/1.jpg);
+  /* object-fit: cover; */
+  background-repeat: no-repeat;
+  background-position: center;
   display: flex;
-  background-color: var(--bc-semi-light1);
   flex-direction: column;
-  justify-content: center;
+  background-size: cover;
+  justify-content: flex-end;
   align-items: center;
   width: 100%;
   height: 100vh;
+}
+
+.about-section .about-container {
+  width: 90%;
+  justify-content: flex-start;
+  margin-bottom: 2rem;
+  background: rgb(9,9,9);
+  background: linear-gradient(70deg, rgba(9,9,9,1) 3%, rgba(9,9,9,0) 80%);
+}
+
+.about-section .items-container {
+  width: 100%;
+  margin: 2rem;
 }
 
 .about-section h2, .projects-section h2, .contact-section h2 {
@@ -100,11 +142,13 @@ ul {
   font-family: var(--ff-2);
 }
 
+.about-section h2 {
+  color: var(--bc-light);
+
+}
+
 .about-section p {
-  padding-left: 2rem;
-  padding-right: 2rem;
-  padding-top: 1rem;
-  text-align: center;
+  color: var(--bc-light);
   max-width: 600px;
 }
 
@@ -126,16 +170,17 @@ ul {
   padding-top: 2rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 4rem;
+  grid-gap: 1rem;
   width: 100%;
   margin: 0 auto;
   margin-bottom: 3rem;
-  max-width: 1000px;
+  max-width: 900px;
 }
 
 .project {
   padding: 1rem;
   border-radius: 5px;
+  transition:background-color 2s;
 }
 
 .project:hover {
@@ -153,39 +198,32 @@ ul {
 
 /* BUTTONS */
 
-.btn {
-  display: inline-block;
-  padding: 0.5rem 2rem;
-  border-radius: 30px;
-}
-
-.btn-show-all {
-  font-size: 1rem;
-  background-color: var(--bc-dark);
-  border: 2px solid var(--bc-semi-light2);
+.btn-projects {
   margin-bottom: 2rem;
-  font-weight: bold;
-  color: var(--bc-semi-light2);
 }
 
-.btn-show-all:hover {
-  background-color: var(--bc-semi-light2);
+.btn-1 {
+  position: relative;
+  margin-top: 1rem;
+  display: inline-block;
+  padding: 5px 30px;
+  text-align: center;
+  font-family: var(--ff-2);
+  font-size: 20px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: var(--bc-light);
+  background: transparent;
+  cursor: pointer;
+  transition: ease-out 0.5s;
+  border: 2px solid var(--bc-light);
+  border-radius: 30px;
+  box-shadow: inset 0 0 0 0 var(--bc-light);
+}
+
+.btn-1:hover {
   color: var(--bc-dark);
-  font-weight: bold;
-}
-
-.btn-show-cv {
-  font-size: 1rem;
-  background-color: var(--bc-semi-light1);
-  border: 2px solid var(--bc-dark);
-  margin-top: 2rem;
-  color: var(--bc-dark);
-}
-
-.btn-show-cv:hover {
-  background-color: var(--bc-dark);
-  color: var(--bc-semi-light1);
-  font-weight: bold;
+  box-shadow: inset 0 -100px 0 0 var(--bc-light);
 }
 
 /* CONTACT SECTION */
@@ -201,14 +239,15 @@ ul {
   text-align: center;
 }
 
-
 .contact-section a {
   color: var(--bc-dark);
   flex-direction: column;
+  padding: 1rem;
+  transition: color 1s;
 }
 
 .contact-section a:hover {
-  opacity: 50%;
+  color: var(--bc-accent);
 }
 
 .contact-section i {
@@ -227,26 +266,32 @@ ul {
 /* FOOTER */
 
 footer {
+  font-size: 25px;
   background-color: var(--bc-dark);
   color: var(--bc-light);
   font-family: var(--ff-2);
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
+  padding: 2rem;
 }
 
-.pinkhat-img {
-  width: 60px;
-  margin-left: 1rem;
+.cr-footer {
+  font-weight: 800; 
+  color: var(--bc-accent);
 }
 
 /* RESPONSIVE DESIGN */
 
 @media only screen and (max-width: 600px) {
   /* NAV SECTION */
+
+  nav img {
+    max-width: 110px;
+  }
+
   .nav a {
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 500;
   }
 
@@ -264,9 +309,15 @@ footer {
     font-size: 1.5rem;
   }
 
+  .about-section .items-container {
+    width: auto;
+    margin: 1rem;
+  }
+  
+
   .about-section p {
     font-size: 14px;
-    max-width: 450px;
+    max-width: 300px;
   }
 
   /* PROJECTS SECTION */
@@ -298,7 +349,7 @@ footer {
   }
 
   footer {
-    font-size: 15px;
+    font-size: 20px;
   }
 }
 
