--- a/styles.css
+++ b/styles.css
@@ -343,8 +343,13 @@ footer {
   }
 
   /* BUTTONS */
-  .btn {
-    padding: 0.5rem 1.5rem;
+  
+  .btn-projects {
+    margin-bottom: 2rem;
+  }
+  
+  .btn-1 {
+    padding: 5px 20px;
     font-size: 15px;
   }
 
