--- a/cv.css
+++ b/cv.css
@@ -144,6 +144,11 @@ footer a {
   }
 }
 
+#navbar a {
+  padding: 15px 20px;
+  font-size: 20px;
+}
+
 @media (max-width: 400px) {
   h2 {
     font-size: 1.5rem;
