--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ nav img:hover {
 
 
 .about-section {
-  background-image: url("./img/1.jpg");
+  background-image: url("./img/hero2.jpg");
   /* object-fit: cover; */
   background-repeat: no-repeat;
   background-position: center;
@@ -130,7 +130,7 @@ nav img:hover {
   justify-content: flex-start;
   margin-bottom: 2rem;
   background: rgb(9,9,9);
-  background: linear-gradient(70deg, rgba(9,9,9,1) 3%, rgba(9,9,9,0) 80%);
+  background: linear-gradient(70deg, rgba(9,9,9,1) 10%, rgba(9,9,9,0) 80%);
 }
 
 .about-section .items-container {
