--- a/cv.css
+++ b/cv.css
@@ -1,13 +1,9 @@
 :root {
-  --ff-1: 'Karla', sans-serif;
-  --ff-2: 'Ubuntu', sans-serif;
-  --bc-accent: #F65A83;
-  --bc-accent-light: #F9B5D0;
+  --ff-1: 'Work Sans', sans-serif;
+  --bc-accent: #cd4f72;
   --bc-dark: #090909;
   --bc-dark2: #2c2c2c;
   --bc-light: #FFF;
-  --bc-semi-light: #EEEEEE;
-  --c-1:  #cd4f72;
   --lh: 1.5;
 }
 
@@ -20,6 +16,7 @@ html, body {
   font-family: var(--ff-1);
   line-height: var(--lh);
 }
+
 .sec-img {
   width: 100%;
   padding-top: 2rem;
@@ -33,15 +30,16 @@ html, body {
   top: 0px;
   width: 300px;
   text-align: center;
-  background-color: var(--c-1);
+  background-color: var(--bc-accent);
 }
 
 #navbar h1 {
   color: var(--bc-light);
-  font-family: var(--ff-2);
-  font-size: 1.5rem;
-  font-weight: 600;
-  padding-bottom: 1rem;
+  font-family: var(--ff-1);
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 500;
+  padding: 30px;
 }
 
 #navbar a {
@@ -50,7 +48,7 @@ html, body {
   padding: 10px 15px;
   font-size: 16px;
   color: var(--bc-light);
-  font-family: var(--ff-2);  
+  font-family: var(--ff-1);  
 }
 
 
@@ -59,15 +57,15 @@ html, body {
 }
 
 #navbar a:hover {
-  background-color: var(--bc-semi-light);
+  background-color: var(--bc-light);
   color: var(--bc-dark);
   cursor: pointer;
 }
 
-.profile-sec {
+/* .profile-sec {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
+} */
 
 .profile-img {
   width: 200px;
@@ -95,15 +93,22 @@ html, body {
 
 h2 {
   font-size: 2rem;
-  font-weight: 500;
+  font-weight: 600;
   color: var(--bc-accent);
-  font-family: var(--ff-2);
+  font-family: var(--ff-1);
+  text-transform: uppercase;
   border-bottom: 4px solid var(--bc-accent);
-  text-align: center;
+  text-align: end;
   margin-top: 1rem;
 }
 
+strong {
+  font-weight: 600;
+}
+
 h3 {
+  font-family: var(--ff-1);
+  font-weight: 400;
   font-size: 1.5rem;
   color: var(--bc-dark);
   padding-top: 1rem;
@@ -117,7 +122,7 @@ ul {
 section ul a{
   text-decoration: none;
   color: var(--bc-dark);
-  font-weight: bold; 
+  font-weight: 600; 
   font-family: var(--ff-2);
 }
 
