--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 :root {
   --ff-1: 'Work Sans', sans-serif;
   --bc-accent: #F54EA1;
-  --bc-accent-light: #F9B5D0;
   --bc-dark:  #0d0d0d;
   --bc-darker: #090909;
   --bc-light: #FFF;
@@ -20,9 +19,8 @@ body {
 
 a {
   text-decoration: none;
-  color: white;
+  color: var(--bc-light);
 }
-
 
 ul {
   list-style: none;
@@ -56,7 +54,6 @@ ul {
   border-bottom: 2px solid var(--bc-accent);
 }
 
-
 /* WELCOME SECTION */
 
 .welcome-section {
@@ -80,16 +77,14 @@ ul {
 .welcome-section h2 {
   font-size: 1.5rem;
   font-weight: 400;
-  font-family: var(--ff-2);
+  font-family: var(--ff-1);
   color: var(--bc-accent);
 }
 
 /* ABOUT SECTION */
 
-
 .about-section {
   background-image: url("./img/hero2.jpg");
-  /* object-fit: cover; */
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
@@ -104,9 +99,10 @@ ul {
 .about-section .about-container {
   z-index: 10;
   width: 90%;
+  border-radius: 10px;
   justify-content: flex-start;
-  margin-bottom: 2rem;
-  background: rgb(9,9,9);
+  margin: auto;
+  background: var(--bc-dark);
   background: linear-gradient(70deg, rgba(9,9,9,1) 10%, rgba(9,9,9,0) 80%);
 }
 
@@ -116,33 +112,32 @@ ul {
 }
 
 .about-section h2, .projects-section h2, .contact-section h2 {
+  font-family: var(--ff-1);
   font-size: 2.5rem;
-  font-weight: 500;
-  font-family: var(--ff-2);
+  font-weight: 600;
 }
 
 .about-section h2 {
   color: var(--bc-light);
-
 }
 
 .about-section p {
   color: var(--bc-light);
-  max-width: 600px;
+  max-width: 560px;
+  font-size: 17px;
 }
 
 /* PROJECTS SECTION */
+
 .projects-section {
   text-align: center;
   background-color: var(--bc-dark);
   width: 100%;
 }
 
-
 .projects-header {
   color: var(--bc-light);
-  font-size:  var(--fz-h1);
-  padding-top: 5rem;
+  padding-top: 3rem;
 }
 
 .projects-grid {
@@ -152,18 +147,23 @@ ul {
   grid-gap: 1rem;
   width: 100%;
   margin: 0 auto;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
   max-width: 900px;
 }
 
 .project {
   padding: 1rem;
   border-radius: 5px;
-  transition:background-color 2s;
+  transition: background-color 0.5s;
+}
+
+.project-title {
+  font-family: var(--ff-1);
+  font-size: 16px;
 }
 
 .project:hover {
-  opacity: 60%;
+  opacity: 70%;
   background-color: var(--bc-light);
   cursor: pointer;
   color: var(--bc-dark);
@@ -178,7 +178,7 @@ ul {
 /* BUTTONS */
 
 .btn-projects {
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
 }
 
 .btn-1 {
@@ -187,7 +187,8 @@ ul {
   display: inline-block;
   padding: 5px 30px;
   text-align: center;
-  font-family: var(--ff-2);
+  font-family: var(--ff-1);
+  font-weight: 500;
   font-size: 20px;
   letter-spacing: 1px;
   text-decoration: none;
@@ -208,9 +209,9 @@ ul {
 /* CONTACT SECTION */
 
 .contact-section {
-  background-color: var(--bc-semi-light1);
+  background-color: var(--bc-light);
   width: 100%;
-  height: 50vh;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -222,7 +223,7 @@ ul {
   color: var(--bc-dark);
   flex-direction: column;
   padding: 1rem;
-  transition: color 1s;
+  transition: color 0.5s;
 }
 
 .contact-section a:hover {
@@ -242,6 +243,11 @@ ul {
   gap: 1rem;
 }
 
+.contact-section p {
+  font-family: var(--ff-1);
+  font-style: oblique;
+}
+
 /* FOOTER */
 
 .footer {
@@ -258,6 +264,8 @@ ul {
 
 .footer-col h3 {
   font-size: 1.5rem;
+  font-family: var(--ff-1);
+  font-weight: 500;
   color: var(--bc-light);
   margin-bottom: 20px;
   position: relative;
@@ -275,19 +283,21 @@ ul {
 }
 
 .footer p {
-  font-size: 25px;
+  font-size: 22px;
 }
 
 .footer-link {
   color: var(--bc-light);
+  font-style: var(--ff-1);
+  font-size: 16px;
+
 }
 
 .footer-link:hover {
-  color: var(--bc-accent-light);
+  color: var(--bc-accent);
 }
 
 .cr-footer {
-  font-weight: 800; 
   color: var(--bc-accent);
 }
 
@@ -304,28 +314,20 @@ ul {
 /* RESPONSIVE DESIGN */
 
 @media only screen and (max-width: 600px) {
-  /* NAV SECTION */
 
-  nav img {
-    max-width: 110px;
-  }
+  /* NAV SECTION */
 
   .nav a {
     font-size: 16px;
-    font-weight: 500;
   }
 
   /* WELCOME SECTION */
+
   .welcome-section h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
   
-  .welcome-section h2 {
-    font-size: 1.5rem;
-  }
-
-  /* ABOUT SECTION */
-  .about-section h2 {
+  .about-section h2, .projects-section h2, .contact-section h2 {
     font-size: 1.5rem;
   }
 
@@ -333,7 +335,6 @@ ul {
     width: auto;
     margin: 1rem;
   }
-  
 
   .about-section p {
     font-size: 14px;
@@ -341,18 +342,12 @@ ul {
   }
 
   /* PROJECTS SECTION */
-  .projects-section h2 {
-    font-size: 1.5rem;
-  }
 
   .project-tile {
-    font-size: 15px;
+    font-size: 14px;
   }
 
   /* CONTACT SECTION */
-  .contact-section h2 {
-    font-size: 1.5rem;
-  }
 
   .contact-section i {
     font-size: 2rem;
@@ -363,10 +358,6 @@ ul {
   }
 
   /* BUTTONS */
-  
-  .btn-projects {
-    margin-bottom: 2rem;
-  }
   
   .btn-1 {
     padding: 5px 20px;
@@ -396,7 +387,6 @@ ul {
   .welcome-section h2 {
     font-size: 1rem;
   }
-
 
   /* PROJECTS SECTION */
   .projects-section h2 {
