--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,8 @@ ul {
 /* ABOUT SECTION */
 
 .about-section {
-  background-image: url("./img/hero2.jpg");
+  /* background-image: url("./img/hero.jpg"); */
+  background-image: url("https://images.unsplash.com/photo-1559614500-75b5f1ffab7c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1035&q=80");
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
