--- a/styles.css
+++ b/styles.css
@@ -320,7 +320,7 @@ ul {
 
   /* NAV SECTION */
 
-  .nav a {
+  .nav-list a {
     font-size: 16px;
   }
 
@@ -331,11 +331,11 @@ ul {
   }
   
   .about-section h2, .projects-section h2, .contact-section h2 {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 
   .about-section p {
-    font-size: 14px;
+    font-size: 15px;
     max-width: 100%;
   }
 
@@ -347,7 +347,7 @@ ul {
   /* PROJECTS SECTION */
 
   .project-tile {
-    font-size: 14px;
+    font-size: 15px;
   }
 
   /* CONTACT SECTION */
@@ -380,20 +380,23 @@ ul {
   }
 }
 
-@media only screen and (max-width: 300px) {
+@media only screen and (max-width: 350px) {
 
-  /* WELCOME SECTION */
+  .nav-list a {
+    font-size: 14px;
+    margin: 1rem;
+  }
+
   .welcome-section h1 {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
   
-  .welcome-section h2 {
-    font-size: 1rem;
+  .about-section h2, .projects-section h2, .contact-section h2 {
+    font-size: 1.5rem;
   }
 
-  /* PROJECTS SECTION */
-  .projects-section h2 {
-    font-size: 1.5rem;
+  .about-section p {
+    font-size: 14px;
   }
 
   .projects-section {
@@ -401,7 +404,7 @@ ul {
   }
 
   .projects-section a {
-    max-width: calc(100% - 2.5rem);
+    max-width: calc(100% - 1rem);
   }
 
 }
