--- a/cv.css
+++ b/cv.css
@@ -17,20 +17,12 @@ html, body {
   line-height: var(--lh);
 }
 
-.sec-img {
-  width: 100%;
-  padding-top: 2rem;
-  padding-bottom: 0;
-}
-
 #navbar {
   height: 100%;
-  left: 0px;
   position: fixed;
-  top: 0px;
   width: 300px;
   text-align: center;
-  background-color: var(--bc-accent);
+  background-color: var(--bc-dark);
 }
 
 #navbar h1 {
@@ -39,8 +31,8 @@ html, body {
   text-transform: uppercase;
   font-size: 2rem;
   font-weight: 500;
-  padding: 30px;
-  background-color:  #b33257;
+  padding: 0 30px 30px 30px;
+  background-color: var(--bc-darker);
 }
 
 #navbar a {
@@ -49,58 +41,56 @@ html, body {
   padding: 10px 15px;
   font-size: 16px;
   color: var(--bc-light);
-  font-family: var(--ff-1);  
-}
+  font-family: var(--ff-1); 
+  border-bottom: solid 3px var(--bc-dark);
 
-
-#navbar h2 {
-  padding-top: 1rem;
 }
 
 #navbar a:hover {
-  background-color: var(--bc-light);
-  color: var(--bc-dark);
+  border-bottom: solid 3px var(--bc-accent);
+  transition: border-bottom 1s;
+  font-weight: 500;
   cursor: pointer;
 }
 
-/* .profile-sec {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-} */
-
-.profile-img {
-  width: 200px;
-  border-radius: 50%;
+.myLogo {
+  max-width: 70px;
+  position: relative;
+  margin-top: 1rem;
+}
+.sec-img {
+  width: 100%;
+  padding-top: 2rem;
+  padding-bottom: 0;
 }
 
 #navbar ul {
   padding: 0;
-  overflow-y: auto;
-  overflow-x: hidden;
 }
 
 #navbar li {
   list-style: none;
-  position: relative;
 }
 
 #main-doc {
-  padding: 2.5rem;
+  width: calc(100% - 300px);
   position: absolute;
   margin-left: 300px;
   margin-right: 0px;
 }
 
+.main-section {
+  margin: 3rem;
+}
 
 h2 {
   font-size: 2rem;
-  font-weight: 600;
-  color: var(--bc-accent);
+  font-weight: 500;
+  color: var(--bc-dark);
   font-family: var(--ff-1);
   text-transform: uppercase;
-  border-bottom: 4px solid var(--bc-accent);
+  border-bottom: 3px solid var(--bc-dark);
   text-align: end;
-  margin-top: 1rem;
 }
 
 strong {
