--- a/cv.css
+++ b/cv.css
@@ -32,7 +32,6 @@ html, body {
   font-size: 2rem;
   font-weight: 500;
   padding: 0 30px 30px 30px;
-  background-color: var(--bc-darker);
 }
 
 #navbar a {
@@ -58,7 +57,8 @@ html, body {
   position: relative;
   margin-top: 1rem;
 }
-.sec-img {
+
+.img-section {
   width: 100%;
   padding-top: 2rem;
   padding-bottom: 0;
@@ -86,35 +86,36 @@ html, body {
 h2 {
   font-size: 2rem;
   font-weight: 500;
+  font-style: italic;
   color: var(--bc-dark);
   font-family: var(--ff-1);
   text-transform: uppercase;
-  border-bottom: 3px solid var(--bc-dark);
+  border-bottom: 2px solid var(--bc-dark);
   text-align: end;
 }
 
 strong {
-  font-weight: 600;
+  font-weight: 500;
+  font-style: italic;
 }
 
 h3 {
   font-family: var(--ff-1);
   font-weight: 400;
   font-size: 1.5rem;
-  color: var(--bc-dark);
+  color: var(--bc-darker);
   padding-top: 1rem;
 }
 
 ul {
-  padding-top: 1rem;
-  padding-left: 1rem;
+  padding: 1rem;
 }
 
 section ul a{
   text-decoration: none;
   color: var(--bc-dark);
-  font-weight: 600; 
-  font-family: var(--ff-2);
+  font-weight: 600;
+  font-style: italic; 
 }
 
 section ul a:hover {
@@ -123,10 +124,10 @@ section ul a:hover {
 
 footer a {
   text-decoration: none;
-  color: var(--bc-accent);
 }
 
 @media (max-width: 850px) {
+
   #navbar {
   position: relative;
   width: auto;
@@ -134,16 +135,20 @@ footer a {
   height: 100vh;
   }
 
+  .myLogo {
+    max-width: 150px;
+  }
+
   #main-doc {
     margin-left: 0;
     width: auto;
   }
 
-}
+  #navbar a {
+    padding: 15px 20px;
+    font-size: 20px;
+  }
 
-#navbar a {
-  padding: 15px 20px;
-  font-size: 20px;
 }
 
 @media (max-width: 400px) {
