--- a/cv.css
+++ b/cv.css
@@ -31,7 +31,7 @@ html, body {
   text-transform: uppercase;
   font-size: 2rem;
   font-weight: 500;
-  padding: 0 30px 30px 30px;
+  padding: 0 30px 0 30px;
 }
 
 #navbar a {
