--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ ul {
 
 .about-section {
   /* background-image: url("./img/hero.jpg"); */
-  background-image: url("https://images.unsplash.com/photo-1539161486680-830c8f04dcb5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80");
+  background-image: url("https://images.unsplash.com/photo-1628148998308-4c460edb320e?q=80&w=2020&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
